--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,16 +14,17 @@
         tools:targetApi="31">
         <activity
             android:name=".Interfaces.Login"
-            android:exported="false" />
-        <activity
-            android:name=".Interfaces.MainPage"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".Interfaces.MainPage"
+            android:exported="true"/>
+
     </application>
 
 </manifest>
